<resources>
    <string name="app_name">chatore</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="signup">SIGNUP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="confirm_password_not_equal_to_password">Password and Confirm Password Not equal</string>
    <string name="signup_failed">Signup Failed : %1$s</string>
    <string name="new_user">New User???</string>
    <string name="failed_to_update_profile">Failed to update profile : %1$s</string>
    <string name="permission_required">Access permission is required</string>
    <string name="save_profile">SAVE</string>
    <string name="user_logout">LOGOUT</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="user_profile">PROFILE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="password_update_success">Password Updated Successfully</string>
    <string name="password_change_failed">Something went wrong: %1$s</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_instructions">Mail sent to : %1$s , Check spam folder.</string>
    <string name="retry_mail">RETRY</string>
    <string name="close_mail">CLOSE</string>
    <string name="sending_email_failed">Email sending failed!:%1$s</string>
    <string name="resend_timer">Resend in :%1$s</string>
    <string name="loading">PLEASE WAIT...</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="retry_message">RETRY</string>
    <string name="close_message">CLOSE</string>
    <string name="chats">Chats</string>
    <string name="requests">Requests</string>
    <string name="find_friends">Find Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_empty">Chats will appear here.</string>
    <string name="requests_empty">Requests will appear here.</string>
    <string name="friends_empty">People will appear here.</string>
    <string name="send_friend_request">SEND</string>
    <string name="cancel_request">CANCEL REQUEST</string>
    <string name="failed_fetch_friends">Failed to fetch friends :%1$s</string>
    <string name="request_sent_success">REQUEST SENT SUCCESSFULLY</string>
    <string name="friend_request_send_failed">FAILED TO SEND FRIEND REQUEST:%1$S</string>
    <string name="request_cancelled_successfully">REQUEST CANCELLED SUCCESSFULLY</string>
    <string name="friend_request_cancel_failed">Failed To Cancel Request:%1$s</string>
    <string name="accept_request">ACCEPT REQUEST</string>
    <string name="deny">DENY</string>
    <string name="failed_fetch_requests">Failed to fetch requests :%1$s</string>
    <string name="failed_deny_request">Failed to deny request :%1$s</string>
    <string name="failed_accept_request">Failed to accept request:%1$s</string>
    <string name="failed_fetch_chatList">Failed to fetch chat list:%1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_to_send_message">Failed to send Message:%1$s</string>
    <string name="message_sent_successfully">Message Sent Successfully</string>
    <string name="no_internet">No internet</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failure_to_upload">Failed to upload file:%1$s</string>
    <string name="failed_to_delete_message">Failed to delete message:%1$s</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="download_progress">Downloading  %1$s (%2$s %%)</string>
    <string name="file_downlaoded_successfully">Download Successfull</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download :%1$s</string>
    <string name="share_with">Share with...</string>
    <string name="failed_to_fetch_friend">Failed to fetch friend list :%1$s</string>

</resources>